# fastlog

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: rust.yml
benches/: log.rs  log_file.rs
src/: config.rs  fastlog.rs  filter.rs  formats.rs  lib.rs  runtime.rs
src/plugin/: file_split.rs  packer.rs
tests/: filter_test.rs  split_test.rs
