[package]
name = "fastlog"
version = "2.0.0"
description = "Rust async log High-performance asynchronous logging"
readme = "README.md"
authors = ["ce <zhuxiujia@qq.com>"]
repository = "https://github.com/rbatis/fast_log"
edition = "2021"
license = "MIT"

[features]
default = ["runtime_thread"]
gzip = ["flate2"]
runtime_thread = []

[dependencies]
fastdate = { git = "https://github.com/sailcex/fastdate.git", tag = "v0.3.34" }
log = { version = "~0.4", features = ["std"] }
crossbeam-utils = "~0.8"
crossbeam-channel = "~0.5"
dark-std = "~0.2"
parking_lot = "~0.12"
flate2 = { version = "~1.0", optional = true }

[dev-dependencies]
criterion = "~0.5"

[[bench]]
name = "log"
harness = false

[[bench]]
name = "log_file"
harness = false

[profile.bench]
lto = true
opt-level = 3
codegen-units = 1